# openagent-cli

./: .gitignore  CLAUDE.md  cli.spec  pyproject.toml
.github/workflows/: release.yml
openagent_cli/: __init__.py  client.py  main.py
scripts/: package-release.sh  release.sh  sign-notarize-macos.sh
src/: __init__.py  client.py  main.py
src/openagent_cli/: __init__.py  main.py
