[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-cli"
version = "0.12.50"
description = "CLI client for OpenAgent — connects to any OpenAgent Gateway"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "rich>=13.0",
    # The CLI uses ``openagent.network.*`` for the iroh-based loopback
    # / connect flows. Mirror the server's transport + crypto deps so a
    # fresh CLI install can dial coordinator endpoints without pulling
    # in the full openagent server.
    "iroh==0.35.0",
    "cbor2>=5.6",
    "srptools>=1.0",
    "cryptography>=42",
]

[project.scripts]
openagent-cli = "openagent_cli.main:main"
